@@ -3096,10 +3096,28 @@ if [ $CROSS = false ] ; then
   echotab "\$(RM) fresh-line.out"
   echol
 
-  # check that scripting works
+  # check that the scripting works
   echol "check-script : lisp${LEXE} lispinit.mem"
   echotab "test \`echo '(print (+ 11 99))' | \$(RUN) -q -M lispinit.mem -\` = 110 || exit 1"
   echotab "test \"\`echo '(+ foo bar)' | \$(RUN) -q -M lispinit.mem -x '(setq foo 11 bar 99)' -repl | tr '\n' '_'\`\" = '99_[1]> _110_' || exit 1"
+  echotab "echo '(progn (setf (stream-element-type *standard-input*) (quote (unsigned-byte 8))) (exit 42))' | \$(RUN) -q -M lispinit.mem -; test \$\$? = 42 || exit 1"
+  echotab "test \`echo '(setf (stream-element-type *standard-output*) (quote (unsigned-byte 8))) (write-sequence (convert-string-to-bytes \"42\" charset:ascii) *standard-output*) (setf (stream-element-type *standard-output*) (quote character)) (terpri)' | ./lisp.run -B . -N locale -E UTF-8 -Epathname 1:1 -Emisc 1:1 -norc -q -M lispinit.mem - | cat\` = 42 || exit 1"
+  echotab "\$(RM) script.lisp; echo '(+ 11 99)' > script.lisp"
+  echotab "test \`\$(RUN) -q -M lispinit.mem < script.lisp\` = 110 || exit 1"
+  echotab "\$(RM) script.lisp; echo '(print (+ 11 99))' > script.lisp"
+  echotab "test \`\$(RUN) -q -M lispinit.mem script.lisp\` = 110 || exit 1"
+  echotab "\$(RM) script.lisp; echo '(+ foo bar)' > script.lisp"
+  echotab "test \`\$(RUN) -q -M lispinit.mem -x '(setq foo 11 bar 99)' -repl < script.lisp | tr '\n' '_'\` = 99_110_ || exit 1"
+  # "-x with lisp-file is invalid"
+  # echotab "\$(RM) script.lisp; echo '(print (+ foo bar))' > script.lisp"
+  # echotab "test \`\$(RUN) -q -M lispinit.mem -x '(setq foo 11 bar 99)' -repl script.lisp | tr '\n' '_'\` = 99_110_ || exit 1"
+  echotab "\$(RM) script.lisp; echo '(progn (setf (stream-element-type *standard-input*) (quote (unsigned-byte 8))) (exit 42))' > script.lisp"
+  echotab "\$(RUN) -q -M lispinit.mem < script.lisp; test \$\$? = 42 || exit 1"
+  echotab "\$(RUN) -q -M lispinit.mem script.lisp; test \$\$? = 42 || exit 1"
+  echotab "\$(RM) script.lisp; echo '(setf (stream-element-type *standard-output*) (quote (unsigned-byte 8))) (write-sequence (convert-string-to-bytes \"42\" charset:ascii) *standard-output*) (setf (stream-element-type *standard-output*) (quote character)) (terpri)' > script.lisp"
+  # ??? echotab "test \`\$(RUN) -q -M lispinit.mem < script.lisp | cat\` = 42 || exit 1"
+  echotab "test \`\$(RUN) -q -M lispinit.mem script.lisp | cat\` = 42 || exit 1"
+  echotab "\$(RM) script.lisp"
   echol
 
   # check that the executable images work
